--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>House Pin - Sua referência em imóveis</title>
 </head>
-<body>
+<body class="hp-background-gray">
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white d-flex justify-content-end hp-h-100">
@@ -22,14 +22,14 @@
                 </button>
                 <div class="collapse navbar-collapse navbar-toggler-lg bg-white text-lg-right pl-4 border-left" id="menu">
                     <ul class="navbar-nav font-weight-bold">
-                        <li class="nav-item mr-2"><a class="nav-link" href="novidades.html">NOVIDADES</a></li>
-                        <li class="nav-item mr-2"><a class="nav-link" href="promocoes.html">PROMOÇÕES</a></li>
-                        <li class="nav-item"><a class="nav-link" href="duvidas-frequentes.html">DÚVIDAS FREQUENTES</a></li>
+                        <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="novidades.html">NOVIDADES</a></li>
+                        <li class="nav-item mr-2"><a class="nav-link hp-font-size-14 hp-color-gray" href="promocoes.html">PROMOÇÕES</a></li>
+                        <li class="nav-item"><a class="nav-link hp-font-size-14 hp-color-gray" href="duvidas-frequentes.html">DÚVIDAS FREQUENTES</a></li>
                     </ul>
                 </div>
                 <div class="justify-content-end">
-                    <button type="button" class="btn font-weight-bold text-secondary mr-0 bg-white hp-hover-text-entrar">ENTRAR</button>
-                    <button type="button" class="btn font-weight-bold hp-round-button hp-border-light-gray pl-3 pr-3 bg-white hp-color-red hp-hover-button-anunciar">ANUNCIAR</button>
+                    <button type="button" class="btn font-weight-bold hp-font-size-14 text-secondary mr-0 bg-white hp-hover-text-entrar hp-color-gray">ENTRAR</button>
+                    <button type="button" class="btn font-weight-bold hp-font-size-14 hp-round-button hp-border-light-gray pl-3 pr-3 bg-white hp-color-red hp-hover-button-anunciar">ANUNCIAR</button>
                 </div>
             </div>
         </nav>
@@ -44,9 +44,68 @@
                     <input type="hidden" name="finalidade" value="comprar">
                 </div>
 
-                <select class="js-example-basic-single hp-select font-weight-bold ml-1" name="state">
-                    <option value="AL">Alabama</option>
-                    <option value="WY">Wyoming</option>
+                <select class="hp-select font-weight-bold ml-1" name="state">
+                    <option></option>
+                    <optgroup label="Alaskan/Hawaiian Time Zone">
+                        <option value="AK">Alaska</option>
+                        <option value="HI">Hawaii</option>
+                    </optgroup>
+                    <optgroup label="Pacific Time Zone">
+                        <option value="CA">California</option>
+                        <option value="NV">Nevada</option>
+                        <option value="OR">Oregon</option>
+                        <option value="WA">Washington</option>
+                    </optgroup>
+                    <optgroup label="Mountain Time Zone">
+                        <option value="AZ">Arizona</option>
+                        <option value="CO">Colorado</option>
+                        <option value="ID">Idaho</option>
+                        <option value="MT">Montana</option>
+                        <option value="NE">Nebraska</option>
+                        <option value="NM">New Mexico</option>
+                        <option value="ND">North Dakota</option>
+                        <option value="UT">Utah</option>
+                        <option value="WY">Wyoming</option>
+                    </optgroup>
+                    <optgroup label="Central Time Zone">
+                        <option value="AL">Alabama</option>
+                        <option value="AR">Arkansas</option>
+                        <option value="IL">Illinois</option>
+                        <option value="IA">Iowa</option>
+                        <option value="KS">Kansas</option>
+                        <option value="KY">Kentucky</option>
+                        <option value="LA">Louisiana</option>
+                        <option value="MN">Minnesota</option>
+                        <option value="MS">Mississippi</option>
+                        <option value="MO">Missouri</option>
+                        <option value="OK">Oklahoma</option>
+                        <option value="SD">South Dakota</option>
+                        <option value="TX">Texas</option>
+                        <option value="TN">Tennessee</option>
+                        <option value="WI">Wisconsin</option>
+                    </optgroup>
+                    <optgroup label="Eastern Time Zone">
+                        <option value="CT">Connecticut</option>
+                        <option value="DE">Delaware</option>
+                        <option value="FL">Florida</option>
+                        <option value="GA">Georgia</option>
+                        <option value="IN">Indiana</option>
+                        <option value="ME">Maine</option>
+                        <option value="MD">Maryland</option>
+                        <option value="MA">Massachusetts</option>
+                        <option value="MI">Michigan</option>
+                        <option value="NH">New Hampshire</option>
+                        <option value="NJ">New Jersey</option>
+                        <option value="NY">New York</option>
+                        <option value="NC">North Carolina</option>
+                        <option value="OH">Ohio</option>
+                        <option value="PA">Pennsylvania</option>
+                        <option value="RI">Rhode Island</option>
+                        <option value="SC">South Carolina</option>
+                        <option value="VT">Vermont</option>
+                        <option value="VA">Virginia</option>
+                        <option value="WV">West Virginia</option>
+                    </optgroup>
                 </select>
 
                 <input type="" name="" class="hp-input font-weight-bold ml-1 bg-white pl-3 pr-3" placeholder="Localidade" />
@@ -57,7 +116,101 @@
         </div>
     </div>
 
+    <div class="container pt-4">
+        <h6 class="font-weight-bold mb-4">Mais de 300 imóveis</h6>
 
+        <div class="row">
+            <div class="col-xl-3 mb-4">
+                <div class="card border-0 hp-background-gray">
+                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
+                    <div class="card-body p-0">
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 mb-4">
+                <div class="card border-0 hp-background-gray">
+                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
+                    <div class="card-body p-0">
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 mb-4">
+                <div class="card border-0 hp-background-gray">
+                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
+                    <div class="card-body p-0">
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 mb-4">
+                <div class="card border-0 hp-background-gray">
+                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
+                    <div class="card-body p-0">
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 mb-4">
+                <div class="card border-0 hp-background-gray">
+                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
+                    <div class="card-body p-0">
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 mb-4">
+                <div class="card border-0 hp-background-gray">
+                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
+                    <div class="card-body p-0">
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 mb-4">
+                <div class="card border-0 hp-background-gray">
+                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
+                    <div class="card-body p-0">
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 mb-4">
+                <div class="card border-0 hp-background-gray">
+                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
+                    <div class="card-body p-0">
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
+                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
+                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer class="page-footer hp-background-red text-white pt-4 pb-4 mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col text-left hp-font-size-14 font-weight-bold">Copyright © 2018, Motorme. Todos os direitos reservados.</div>
+                <div class="col text-right hp-font-size-14 font-weight-bold"><a href="" class="text-white">TERMOS DE USO</a><a href="" class="text-white ml-4">POLÍTICA DE PRIVACIDADE</a></div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
