--- a/index.html
+++ b/index.html
@@ -45,67 +45,10 @@
                 </div>
 
                 <select class="hp-select font-weight-bold ml-1" name="state">
-                    <option></option>
-                    <optgroup label="Alaskan/Hawaiian Time Zone">
-                        <option value="AK">Alaska</option>
-                        <option value="HI">Hawaii</option>
-                    </optgroup>
-                    <optgroup label="Pacific Time Zone">
-                        <option value="CA">California</option>
-                        <option value="NV">Nevada</option>
-                        <option value="OR">Oregon</option>
-                        <option value="WA">Washington</option>
-                    </optgroup>
-                    <optgroup label="Mountain Time Zone">
-                        <option value="AZ">Arizona</option>
-                        <option value="CO">Colorado</option>
-                        <option value="ID">Idaho</option>
-                        <option value="MT">Montana</option>
-                        <option value="NE">Nebraska</option>
-                        <option value="NM">New Mexico</option>
-                        <option value="ND">North Dakota</option>
-                        <option value="UT">Utah</option>
-                        <option value="WY">Wyoming</option>
-                    </optgroup>
-                    <optgroup label="Central Time Zone">
-                        <option value="AL">Alabama</option>
-                        <option value="AR">Arkansas</option>
-                        <option value="IL">Illinois</option>
-                        <option value="IA">Iowa</option>
-                        <option value="KS">Kansas</option>
-                        <option value="KY">Kentucky</option>
-                        <option value="LA">Louisiana</option>
-                        <option value="MN">Minnesota</option>
-                        <option value="MS">Mississippi</option>
-                        <option value="MO">Missouri</option>
-                        <option value="OK">Oklahoma</option>
-                        <option value="SD">South Dakota</option>
-                        <option value="TX">Texas</option>
-                        <option value="TN">Tennessee</option>
-                        <option value="WI">Wisconsin</option>
-                    </optgroup>
-                    <optgroup label="Eastern Time Zone">
-                        <option value="CT">Connecticut</option>
-                        <option value="DE">Delaware</option>
-                        <option value="FL">Florida</option>
-                        <option value="GA">Georgia</option>
-                        <option value="IN">Indiana</option>
-                        <option value="ME">Maine</option>
-                        <option value="MD">Maryland</option>
-                        <option value="MA">Massachusetts</option>
-                        <option value="MI">Michigan</option>
-                        <option value="NH">New Hampshire</option>
-                        <option value="NJ">New Jersey</option>
-                        <option value="NY">New York</option>
-                        <option value="NC">North Carolina</option>
-                        <option value="OH">Ohio</option>
-                        <option value="PA">Pennsylvania</option>
-                        <option value="RI">Rhode Island</option>
-                        <option value="SC">South Carolina</option>
-                        <option value="VT">Vermont</option>
-                        <option value="VA">Virginia</option>
-                        <option value="WV">West Virginia</option>
-                    </optgroup>
+                    <option></option>                    
+                    <optgroup label="RESIDENCIAL"><option value="15">Apart Hotel / Flat / Loft</option><option value="1">Apartamento</option><option value="14">Apto. Cobertura / Duplex</option><option value="11">Casa-Condomínio</option><option value="2">Casa-Térrea</option><option value="5">Kitnet</option><option value="6">Sobrado</option><option value="13">Sobrado-Condomínio</option><option value="4">Terreno</option><option value="12">Terreno-Condomínio</option></optgroup>
+                    <optgroup label="COMERCIAL"><option value="16">Área</option><option value="17">Casa Comercial</option><option value="18">Galpão / Depósito</option><option value="3">Imóvel Comercial</option><option value="19">Indústria / Fábrica</option><option value="20">Ponto Comercial</option><option value="21">Pousada / Hotel / Motel</option><option value="22">Sala / Salão / Loja</option></optgroup>
+                    <optgroup label="RURAL"><option value="7">Chácara</option><option value="8">Fazenda</option><option value="23">Haras</option><option value="9">Pesqueiro</option><option value="10">Sitio</option></optgroup>
                 </select>
 
                 <input type="" name="" class="hp-input font-weight-bold ml-1 bg-white pl-3 pr-3" placeholder="Localidade" />
@@ -206,7 +149,7 @@
     <footer class="page-footer hp-background-red text-white pt-4 pb-4 mt-4">
         <div class="container">
             <div class="row">
-                <div class="col text-left hp-font-size-14 font-weight-bold">Copyright © 2018, Motorme. Todos os direitos reservados.</div>
+                <div class="col text-left hp-font-size-14 font-weight-bold">Copyright © 2018, House Pin. Todos os direitos reservados.</div>
                 <div class="col text-right hp-font-size-14 font-weight-bold"><a href="" class="text-white">TERMOS DE USO</a><a href="" class="text-white ml-4">POLÍTICA DE PRIVACIDADE</a></div>
             </div>
         </div>
