--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/css.css">
 
-    <title>House Pin - Sua referência em imóveis</title>
+    <title>Cadastro | House Pin - Sua referência em imóveis</title>
 </head>
 <body class="hp-background-gray">
 
@@ -67,7 +67,7 @@
         </nav>
     </header>
 
-    <div class="hp-search-home">
+    <div class="hp-search-interno">
         <div class="container">
             <div class="hp-base-formulario mx-auto">
                 <div class="hp-finalidade font-weight-bold mr-1">
@@ -88,88 +88,111 @@
     </div>
 
     <div class="container pt-4">
-        <h6 class="font-weight-bold mb-4">Mais de 300 imóveis</h6>
+        <h6 class="font-weight-bold mb-4">Cadastro</h6>
+        
+
+        <!--
+        nome
+        cpf
+        email
+        telefone
+        endereço - rua, número, bairro, cidade, estado, cep, complemento
+
+        imobiliaria -> pessoa física ou juridica
+            creci
+            cnpj
+            razão social
+        -->
+
+
 
         <div class="row">
-            <div class="col-xl-3 mb-4">
-                <div class="card border-0 hp-background-gray">
-                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
-                    <div class="card-body p-0">
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+            <div class="col-xl-6 mb-4">
+                <form>
+                    <div class="mb-3">
+                        <div class="custom-control custom-radio custom-control-inline">
+                            <input type="radio" id="campo_pessoa_fisica" name="campo_pessoa" class="custom-control-input" checked="checked">
+                            <label class="custom-control-label" for="campo_pessoa_fisica">Pessoa Física</label>
+                        </div>
+                        <div class="custom-control custom-radio custom-control-inline">
+                            <input type="radio" id="campo_pessoa_juridica" name="campo_pessoa" class="custom-control-input">
+                            <label class="custom-control-label" for="campo_pessoa_juridica">Pessoa Jurídica</label>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xl-3 mb-4">
-                <div class="card border-0 hp-background-gray">
-                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
-                    <div class="card-body p-0">
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <label for="inputEmail4">Nome Completo</label>
+                            <input type="email" class="form-control" id="campo_nome" placeholder="Nome Completo">
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label for="inputPassword4">CRECI</label>
+                            <input type="password" class="form-control" id="campo_creci" placeholder="CRECI">
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xl-3 mb-4">
-                <div class="card border-0 hp-background-gray">
-                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
-                    <div class="card-body p-0">
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    <div class="form-row hp-grupo-pessoa-fisica d-none">
+                        <div class="form-group col-md-4">
+                            <label for="inputEmail4">CNPJ</label>
+                            <input type="email" class="form-control" id="campo_email" placeholder="CNPJ">
+                        </div>
+                        <div class="form-group col-md-8">
+                            <label for="inputEmail4">Razão Social</label>
+                            <input type="email" class="form-control" id="campo_email" placeholder="Razão Social">
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xl-3 mb-4">
-                <div class="card border-0 hp-background-gray">
-                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
-                    <div class="card-body p-0">
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword4">CPF</label>
+                            <input type="password" class="form-control" id="campo_cpf" placeholder="CPF">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword4">Telefone</label>
+                            <input type="password" class="form-control" id="campo_telefone" placeholder="Telefone">
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xl-3 mb-4">
-                <div class="card border-0 hp-background-gray">
-                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
-                    <div class="card-body p-0">
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">E-mail</label>
+                            <input type="email" class="form-control" id="campo_email" placeholder="E-mail">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword4">Senha</label>
+                            <input type="password" class="form-control" id="campo_senha" placeholder="Senha">
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xl-3 mb-4">
-                <div class="card border-0 hp-background-gray">
-                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
-                    <div class="card-body p-0">
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label for="inputZip">CEP</label>
+                            <input type="text" class="form-control" id="campo_cep" placeholder="CEP">
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="inputCity">Cidade</label>
+                            <input type="text" class="form-control" id="campo_cidade" placeholder="Cidade">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputState">Estado</label>
+                            <select id="campo_estado" class="form-control">
+                                <option selected>Selecione</option>
+                                <option>...</option>
+                            </select>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xl-3 mb-4">
-                <div class="card border-0 hp-background-gray">
-                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
-                    <div class="card-body p-0">
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
+                    <div class="form-row">
+                         <div class="form-group col-md-4">
+                            <label for="inputCity">Bairro</label>
+                            <input type="text" class="form-control" id="campo_bairro" placeholder="Bairro">
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="inputCity">Rua</label>
+                            <input type="text" class="form-control" id="campo_rua" placeholder="Rua">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputZip">Número</label>
+                            <input type="text" class="form-control" id="campo_numero" placeholder="Número">
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-xl-3 mb-4">
-                <div class="card border-0 hp-background-gray">
-                    <img class="card-img-top rounded" src="images/lista-imovel.png" alt="localização do imovel">
-                    <div class="card-body p-0">
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">APARTAMENTO</span>
-                        <div class="hp-font-size-16 font-weight-bold hp-line-height-20">Jardim Universitário<br>Dourados - MS</div>
-                        <span class="hp-font-size-12 hp-color-partial-gray font-weight-bold">Rua Visconde Bastos, 358</span>
-                    </div>
-                </div>
+                    <button type="submit" class="btn btn-primary mt-4">Cadastrar</button>
+                </form>
             </div>
         </div>
     </div>
